Select contents by year and month

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -30,6 +30,7 @@ a {
 }
 
 h2 {
+  padding-top: 1em;
   margin-bottom: 0.3em;
 }
 
@@ -44,7 +45,7 @@ code {
 }
 
 .diary {
-  margin-bottom: 3em;
+  margin-bottom: 2em;
 }
 
 .date-link {
