--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,9 +1,10 @@
+$bacground-color: #f1f5f9;
 $surface-color: #ffffff;
 $text-color: #1e2529;
-$brand-color: #577def;
+$brand-color: #778d9c;
 
-$content-width: 800px;
-$navigation-width: 150px;
+$content-width: 900px;
+$navigation-width: 140px;
 $on-palm: 580px;
 
 @mixin media-query($device) {
@@ -26,7 +27,7 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 18px;
-  background-color: $surface-color;
+  background-color: $bacground-color;
   color: $text-color;
   word-break: break-all;
   scroll-behavior: smooth;
@@ -59,11 +60,11 @@ code {
 .container {
   display: flex;
   flex-direction: row;
-  align-items: stretch;
+  align-items: flex-start;
 
   max-width: $content-width;
   margin: 0 auto;
-  padding: 1em;
+  padding: 0.5em;
 
   @include media-query($content-width + $navigation-width * 2) {
     flex-direction: column;
@@ -76,7 +77,7 @@ code {
   gap: 0.5em;
 
   width: $navigation-width;
-  padding-top: 68px;
+  padding-top: 2em;
   margin-left: -1 * $navigation-width;
 
   @include media-query($content-width + $navigation-width * 2) {
@@ -84,13 +85,12 @@ code {
     margin-left: 0;
     flex-direction: row;
     align-items: stretch;
-    padding-top: 11px;
     overflow-x: scroll;
     white-space: nowrap;
-    margin-left: -1em;
-    padding-left: 1em;
-    margin-right: -1em;
-    padding-right: 1em;
+    margin-left: -0.5em;
+    padding-left: 0.5em;
+    margin-right: -0.5em;
+    padding-right: 0.5em;
   }
 }
 
@@ -118,21 +118,29 @@ code {
 .content {
   width: 100%;
   padding: 2em 0;
-
-  @include media-query($content-width + $navigation-width * 2) {
-    padding-top: 0em;
-  }
 }
 
 .diary {
+  padding: 2em;
   margin-bottom: 1em;
+  background-color: $surface-color;
+  border-radius: 0.3em;
+
+  @include media-query($on-palm) {
+    padding: 2em 1em;
+  }
 }
 
 .date-link {
   h2 {
-    padding-top: 1em;
+    font-size: 1.6 * 1em;
     margin-top: 0;
-    margin-bottom: 0.3em;
+    margin-bottom: 1em;
+    text-align: center;
+
+    @include media-query($on-palm) {
+      margin-bottom: 0.5em;
+    }
   }
 
   color: $text-color;
@@ -148,6 +156,7 @@ code {
 .sbx-p {
   margin-top: 0.2em;
   margin-bottom: 0.2em;
+  line-height: 1.5;
 
   &:before {
     content: '・';
