--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -289,6 +289,12 @@ img {
   max-width: 100%;
 }
 
+.sbx-pre {
+  font-size: 0.8em;
+  margin-top: 0.3em;
+  margin-bottom: 0.3em;
+}
+
 .footer {
   font-size: 0.9em;
   text-align: center;
